data export module added, and variour api chnages

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -201,6 +201,10 @@
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Products</span></a></li>
 
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'units_list' %}"
+                            aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                class="hide-menu">Units</span></a></li>
+
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'user_type_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">UserTypes</span></a></li>
