--- a/home/templates/category-list.html
+++ b/home/templates/category-list.html
@@ -27,6 +27,7 @@
 
                     <div class="text-end">
                         <a href="{% url 'add_category' %}" class="btn btn-primary">Add Category</a>
+                        <a href="{% url 'export-to-excel-categories' %}" class="btn btn-primary">Export as Excel</a>
                     </div>
                     <div class="table-responsive">
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
