--- a/home/templates/product-list.html
+++ b/home/templates/product-list.html
@@ -26,17 +26,13 @@
                 <div class="card-body">
                   
                     <h4 class="card-title">Products</h4>
-                    
-                    
-
                     <h6 class="card-subtitle">List of all Products</h6>
                     
-
-
-                    {% comment %} <div class="text-end">
-                        <a href="" class="btn btn-primary">Add Product</a>
-                        
-                    </div> {% endcomment %}
+                    <div class="text-end">
+                        {% comment %} <a href="" class="btn btn-primary">Add Product</a> {% endcomment %}
+                        <a href="{% url 'export-to-excel-products' %}" class="btn btn-primary">Export as Excel</a>
+                    </div>
+                    
                     <div class="table-responsive">
                         <table id="zero_config" class="table table-striped table-bordered no-wrap">
                             <thead>
@@ -47,7 +43,6 @@
                                     <th>Action</th>
                                 </tr>
                             </thead>
-
 
                             <tbody>
                                 {% for data in datas %}
