delete api added

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -115,7 +115,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
-                                <img src="{% static 'assets/images/users/profile-pic.jpg' %}" alt="user"
+                                <img src="{% static 'assets/images/img1.jpg' %}" alt="user"
                                     class="rounded-circle" width="40">
                                 <span class="ml-2 d-none d-lg-inline-block"><span>Hello,</span> <span
                                         class="text-dark">{{request.user.name}}</span> <i data-feather="chevron-down"
@@ -187,7 +187,7 @@
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'bids-list-real-time' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
-                                    class="hide-menu">Realtime Bids</span></a></li>
+                                    class="hide-menu">Real-Time Bids</span></a></li>
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'category_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
