--- a/home/templates/edit-bid.html
+++ b/home/templates/edit-bid.html
@@ -242,7 +242,7 @@
                     <div class="col-md-12">
                         <label class="labels">Delete</label>
                         <div class="d-flex align-items-center">
-                            <span class="current-status {% if bid_data.0.is_approved == 'yes' %}text-success{% else %}text-danger{% endif %}">
+                            <span class="text-danger">
                                 Delete Bid
                             </span>
                             <div class="ml-auto"> <!-- Add this div with ml-auto -->
