--- a/home/templates/user-domanis-list.html
+++ b/home/templates/user-domanis-list.html
@@ -85,12 +85,17 @@
                                     {% endif %}
                                    </td>
                                     <td class="text-end">
-                                        <a href="{% url 'delete_domain' id=data.id %}" >
+                                        {% comment %} <a href="{% url 'delete_domain' id=data.id %}" >
                                         <button type="button"
                                             class="btn btn-sm btn-square btn-neutral text-danger-hover">
                                             <i class="bi bi-trash"></i>
                                         </button>
+                                        </a> {% endcomment %}
+
+                                        <a href="#" class="btn btn-sm btn-square btn-neutral text-danger-hover delete-btn" data-url="{% url 'delete_domain' id=data.id %}">
+                                                        <i class="bi bi-trash"></i>  
                                         </a>
+
                                     </td>
                                 </tr>
                                 {% endfor %}
@@ -100,11 +105,163 @@
                         </table>
                     </div>
                 </div>
+
+                                            <!-- Modal HTML -->
+                            <div id="myModal" class="modal">
+                                <div class="modal-dialog modal-confirm">
+                                    <div class="modal-content">
+                                        <div class="modal-header flex-column">
+                                            <div class="icon-box">
+                                                <i class="material-icons">&#xE5CD;</i>
+                                            </div>						
+                                            <h4 class="modal-title w-100">Are you sure?</h4>	
+                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>Do you really want to delete these records? This process cannot be undone.</p>
+                                        </div>
+                                        <div class="modal-footer justify-content-center">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelBtn">Cancel</button>
+                                            <button type="button" class="btn btn-danger" id="confirmBtn">Delete</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>  
+                            
+                            <!-- Modal CSS -->
+                            <style>
+                                .modal-confirm {		
+                                    color: #636363;
+                                    width: 400px;
+                                }
+                                .modal-confirm .modal-content {
+                                    padding: 20px;
+                                    border-radius: 5px;
+                                    border: none;
+                                    text-align: center;
+                                    font-size: 14px;
+                                }
+                                .modal-confirm .modal-header {
+                                    border-bottom: none;   
+                                    position: relative;
+                                }
+                                .modal-confirm h4 {
+                                    text-align: center;
+                                    font-size: 26px;
+                                    margin: 30px 0 -10px;
+                                }
+                                .modal-confirm .close {
+                                    position: absolute;
+                                    top: -5px;
+                                    right: -2px;
+                                }
+                                .modal-confirm .modal-body {
+                                    color: #999;
+                                }
+                                .modal-confirm .modal-footer {
+                                    border: none;
+                                    text-align: center;		
+                                    border-radius: 5px;
+                                    font-size: 13px;
+                                    padding: 10px 15px 25px;
+                                }
+                                .modal-confirm .modal-footer a {
+                                    color: #999;
+                                }		
+                                .modal-confirm .icon-box {
+                                    width: 80px;
+                                    height: 80px;
+                                    margin: 0 auto;
+                                    border-radius: 50%;
+                                    z-index: 9;
+                                    text-align: center;
+                                    border: 3px solid #f15e5e;
+                                }
+                                .modal-confirm .icon-box i {
+                                    color: #f15e5e;
+                                    font-size: 46px;
+                                    display: inline-block;
+                                    margin-top: 13px;
+                                }
+                                .modal-confirm .btn, .modal-confirm .btn:active {
+                                    color: #fff;
+                                    border-radius: 4px;
+                                    background: #60c7c1;
+                                    text-decoration: none;
+                                    transition: all 0.4s;
+                                    line-height: normal;
+                                    min-width: 120px;
+                                    border: none;
+                                    min-height: 40px;
+                                    border-radius: 3px;
+                                    margin: 0 5px;
+                                }
+                                .modal-confirm .btn-secondary {
+                                    background: #c1c1c1;
+                                }
+                                .modal-confirm .btn-secondary:hover, .modal-confirm .btn-secondary:focus {
+                                    background: #a8a8a8;
+                                }
+                                .modal-confirm .btn-danger {
+                                    background: #f15e5e;
+                                }
+                                .modal-confirm .btn-danger:hover, .modal-confirm .btn-danger:focus {
+                                    background: #ee3535;
+                                }
+                                .trigger-btn {
+                                    display: inline-block;
+                                    margin: 100px auto;
+                                }
+                            </style>
+
             </div>
         </div>
     </div>
 
 </div>
 
+<!-- Modal JS -->
+<script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // Get the confirm and cancel buttons
+    var confirmBtn = document.getElementById("confirmBtn");
+    var cancelBtn = document.getElementById("cancelBtn");
+
+    // When the user clicks on delete button, open the modal 
+    document.querySelectorAll('.delete-btn').forEach(function(btn) {
+        btn.onclick = function(event) {
+            event.preventDefault();
+            modal.style.display = "block";
+            confirmBtn.dataset.url = this.dataset.url;
+        }
+    });
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks on cancel button, close the modal
+    cancelBtn.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks on confirm button, redirect to delete URL
+    confirmBtn.onclick = function() {
+        window.location.href = confirmBtn.dataset.url;
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 
 {% endblock body %}
