--- a/home/templates/base-execution.html
+++ b/home/templates/base-execution.html
@@ -129,7 +129,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
-                                <img src="{% static 'assets/images/users/profile-pic.jpg' %}" alt="user"
+                                <img src="{% static 'assets/images/img1.jpg' %}" alt="user"
                                     class="rounded-circle" width="40">
                                 <span class="ml-2 d-none d-lg-inline-block"><span>Hello,</span> <span
                                         class="text-dark">{{request.user.name}}</span> <i data-feather="chevron-down"
