assessments module changed

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -265,6 +265,8 @@
     <script src="{% static 'dist/js/custom.min.js' %}"></script>
     <script src="{% static 'dist/js/enable.js' %}"></script>
 
+    <!-- Date Time Picker -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
     
 
     <!--This page plugins -->
