--- a/home/templates/bid-list.html
+++ b/home/templates/bid-list.html
@@ -100,9 +100,9 @@
                                                         <i class="bi bi-trash"></i>  
                                                     </a> {% endcomment %}
                                                     
-                                                    <a href="#" class="btn btn-sm btn-square btn-neutral text-danger-hover delete-btn" data-url="{% url 'delete-bid' bid_id=bid.id %}">
+                                                    {% comment %} <a href="#" class="btn btn-sm btn-square btn-neutral text-danger-hover delete-btn" data-url="{% url 'delete-bid' bid_id=bid.id %}">
                                                         <i class="bi bi-trash"></i>  
-                                                    </a>
+                                                    </a> {% endcomment %}
                                                         
                                                 </td>
                                             </tr>
@@ -113,7 +113,7 @@
                             </div>
 
                             <!-- Modal HTML -->
-                            <div id="myModal" class="modal">
+                            {% comment %} <div id="myModal" class="modal">
                                 <div class="modal-dialog modal-confirm">
                                     <div class="modal-content">
                                         <div class="modal-header flex-column">
@@ -132,10 +132,10 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>  
+                            </div>   {% endcomment %}
                             
                             <!-- Modal CSS -->
-                            <style>
+                            {% comment %} <style>
                                 .modal-confirm {		
                                     color: #636363;
                                     width: 400px;
@@ -218,7 +218,7 @@
                                     display: inline-block;
                                     margin: 100px auto;
                                 }
-                            </style>
+                            </style> {% endcomment %}
 
                         </div>
                     </div>
@@ -229,7 +229,7 @@
 </div>
 
 <!-- Modal JS -->
-<script>
+{% comment %} <script>
     // Get the modal
     var modal = document.getElementById("myModal");
 
@@ -270,6 +270,6 @@
             modal.style.display = "none";
         }
     }
-</script>
+</script> {% endcomment %}
 
 {% endblock body %}
