--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -2,114 +2,305 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <!-- Webpixels CSS -->
-    <style>
-      @import url(https://unpkg.com/@webpixels/css@1.1.5/dist/index.css);
-    </style>
-
-    <!-- Bootstrap Icons -->
-    <style>
-      @import url("https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.4.0/font/bootstrap-icons.min.css");
-
-      @import "bourbon";
-
-      body {
-        background: #eee !important;
-      }
-
-      .wrapper {
-        margin-top: 80px;
-        margin-bottom: 80px;
-      }
-
-      .form-signin {
-        max-width: 380px;
-        padding: 15px 35px 45px;
-        margin: 0 auto;
-        background-color: #fff;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-
-        .form-signin-heading,
-        .checkbox {
-          margin-bottom: 30px;
-        }
-
-        .checkbox {
-          font-weight: normal;
-        }
-
-        .form-control {
-          position: relative;
-          font-size: 16px;
-          height: auto;
-          padding: 10px;
-          @include box-sizing(border-box);
-
-          &:focus {
-            z-index: 2;
-          }
-        }
-
-        input[type="text"] {
-          margin-bottom: -1px;
-          border-bottom-left-radius: 0;
-          border-bottom-right-radius: 0;
-        }
-
-        input[type="password"] {
-          margin-bottom: 20px;
-          border-top-left-radius: 0;
-          border-top-right-radius: 0;
-        }
-      }
-    </style>
+    <title>Echo Admin</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
+
+    /* ======- BODY -====== */
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: linear-gradient(#1e2022, #52616b);
+      overflow: hidden;
+    }
+
+    /* ======- FORM -======= */
+    .wrapper {
+      position: relative;
+      width: 400px;
+      height: 500px;
+    }
+
+    /* Form color */
+    .form-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #f0f5f9;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+    /* Form animations */
+    .wrapper.animate-signUp .form-wrapper.sign-in {
+      transform: rotate(7deg);
+      animation: animateRotate 0.7s ease-in-out forwards;
+      animation-delay: 0.3s;
+    }
+
+    .wrapper.animate-signIn .form-wrapper.sign-in {
+      animation: animateSignIn 1.5s ease-in-out forwards;
+    }
+
+    @keyframes animateSignIn {
+      0% {
+        transform: translateX(0);
+      }
+
+      50% {
+        transform: translateX(-500px);
+      }
+
+      100% {
+        transform: translateX(0) rotate(7deg);
+      }
+    }
+
+    .wrapper .form-wrapper.sign-up {
+      transform: rotate(7deg);
+    }
+
+    .wrapper.animate-signIn .form-wrapper.sign-up {
+      animation: animateRotate 0.7s ease-in-out forwards;
+      animation-delay: 0.3s;
+    }
+
+    @keyframes animateRotate {
+      0% {
+        transform: rotate(7deg);
+      }
+
+      100% {
+        transform: rotate(0);
+        z-index: 1;
+      }
+    }
+
+    .wrapper.animate-signUp .form-wrapper.sign-up {
+      animation: animateSignUp 1.5s ease-in-out forwards;
+    }
+
+    @keyframes animateSignUp {
+      0% {
+        transform: translateX(0);
+        z-index: 1;
+      }
+
+      50% {
+        transform: translateX(500px);
+      }
+
+      100% {
+        transform: translateX(0) rotate(7deg);
+      }
+    }
+    /* Heading text */
+    h2 {
+      font-size: 30px;
+      color: #1e2022;
+      text-align: center;
+    }
+    /* Input text */
+    .input-group {
+      position: relative;
+      width: 320px;
+      margin: 0 0 30px 0;
+    }
+
+    .input-group label {
+      position: absolute;
+      top: 50%;
+      left: 5px;
+      transform: translateY(-50%);
+      font-size: 16px;
+      color: #1e2022;
+      padding: 0 5px;
+      pointer-events: none;
+      transition: 0.5s;
+    }
+
+    .input-group input {
+      width: 100%;
+      height: 40px;
+      font-size: 16px;
+      color: #1e2022;
+      padding: 0 10px;
+      background: transparent;
+      border: 1px solid #1e2022;
+      outline: none;
+      border-radius: 5px;
+    }
+    /* Input label color */
+    .input-group input:focus ~ label,
+    .input-group input:valid ~ label {
+      top: 0;
+      font-size: 12px;
+      background: #f0f5f9;
+    }
+
+    .custom-margin {
+      margin: 0 0 30px 0;
+    }
+
+    .forgot-pass {
+      margin: -15px 0 15px;
+    }
+    /* Forgot password text */
+    .forgot-pass a {
+      color: #1e2022;
+      font-size: 14px;
+      text-decoration: none;
+    }
+
+    .forgot-pass a:hover {
+      text-decoration: underline;
+    }
+    /* Button */
+    .btn {
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 40px;
+      background: linear-gradient(to right, #1e2022, #52616b);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+      font-size: 16px;
+      color: #f0f5f9;
+      font-weight: 500;
+      cursor: pointer;
+      border-radius: 5px;
+      border: none;
+      outline: none;
+    }
+
+    .sign-link {
+      font-size: 14px;
+      text-align: center;
+      margin: 25px 0;
+    }
+    /* Sign link text */
+    .sign-link p {
+      color: #1e2022;
+    }
+
+    .sign-link p a {
+      color: #4592af;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .sign-link p a:hover {
+      text-decoration: underline;
+    }
+  </style>
 
   <body>
     <div class="wrapper">
+      <div class="form-wrapper sign-up">
+        <form action="">
+          <h2>Sign Up</h2>
+          <div class="input-group">
+            <input type="text" required />
+            <label for="">Username</label>
+          </div>
+          <div class="input-group">
+            <input type="email" required />
+            <label for="">Email</label>
+          </div>
+          <div class="input-group">
+            <input type="password" required />
+            <label for="">Password</label>
+          </div>
+          <button type="submit" class="btn">Sign Up</button>
+          {% comment %}
+          <div class="sign-link">
+            <p>
+              Already have an account?
+              <a href="#" class="signIn-link">Sign In</a>
+            </p>
+          </div>
+          {% endcomment %}
+        </form>
+      </div>
 
-      <form class="form-signin" method="POST">
-        {% csrf_token %}
-        <h2 class="form-signin-heading">Please login</h2>
-
-        <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
-        <div class="col-lg-3 col-md-3 mb-3">
-					{{ form.email }}
-					{% if form.email.errors %}
-					    {{ form.email.errors }}
-					{% endif %}
-        </div>
-
-        {% comment %} <input type="text" class="form-control" name="username"placeholder="Email Address" required="" autofocus="" /> {% endcomment %}
-
-        <label for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
-        <div class="col-lg-3 col-md-3 mb-3">
-            {{ form.password }}
-            {% if form.password.errors %}
-                {{ form.password.errors }}
+      <div class="form-wrapper sign-in">
+        <form class="form-signin" method="POST">
+          {% csrf_token %}
+          <h2 class="custom-margin">Login</h2>
+          <div>Password</div>
+          <div class="input-group">
+            {% comment %}
+            <label for="{{ form.email.id_for_label }}"
+              >{{ form.email.label }}</label
+            >
+            {% endcomment %}
+            <label for="{{ form.email.id_for_label }}"></label>
+            {{ form.email }} {% if form.email.errors %} {{ form.email.errors }}
             {% endif %}
-        </div>
-
-        
-        <label class="checkbox">
-          <input
-            type="checkbox"
-            value="remember-me"
-            id="rememberMe"
-            name="rememberMe"
-          />
-          Remember me
-        </label>
-
-        <div class="row">
-          <button class="btn btn-lg btn-primary btn-block" type="submit">
-            Login
-          </button>
-         </div>
-      </form>
+          </div>
+          <div>Password</div>
+          <div class="input-group">
+            {% comment %}
+            <label for="{{ form.password.id_for_label }}"
+              >{{ form.password.label }}</label
+            >
+            {% endcomment %}
+            <label for="{{ form.password.id_for_label }}"></label>
+            {{ form.password }} {% if form.password.errors %} {{
+            form.password.errors }} {% endif %}
+          </div>
+          <div class="forgot-pass">
+            <input
+              type="checkbox"
+              value="remember-me"
+              id="rememberMe"
+              name="rememberMe"
+            />
+            Remember me
+          </div>
+          <button type="submit" class="btn">Login</button>
+          {% comment %}
+          <div class="sign-link">
+            <p>
+              Don't have an account? <a href="#" class="signUp-link">Sign Up</a>
+            </p>
+          </div>
+          {% endcomment %}
+        </form>
+      </div>
     </div>
+
+    <script>
+      const wrapper = document.querySelector(".wrapper");
+      const signUpLink = document.querySelector(".signUp-link");
+      const signInLink = document.querySelector(".signIn-link");
+
+      signUpLink.addEventListener("click", () => {
+        wrapper.classList.add("animate-signIn");
+        wrapper.classList.remove("animate-signUp");
+      });
+
+      signInLink.addEventListener("click", () => {
+        wrapper.classList.add("animate-signUp");
+        wrapper.classList.remove("animate-signIn");
+      });
+    </script>
   </body>
 </html>
