panel user add api added

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -216,11 +216,25 @@
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'banner_list' %}"
                                 aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Banners</span></a></li>
-                        
+
+                        <li class="list-divider"></li>
+
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'panel_users_admin' %}"
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                    class="hide-menu">Admins</span></a></li>
+
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'panel_users_execution' %}"
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                    class="hide-menu">Execution</span></a></li>
+
+                        <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'panel_users_service_support' %}"
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
+                                    class="hide-menu">Service Support</span></a></li>
+
                         <li class="list-divider"></li>
 
                         <li class="sidebar-item"> <a class="sidebar-link sidebar-link" href="{% url 'panel_logout' %}"
-                                aria-expanded="false"><i data-feather="log-out" class="feather-icon"></i><span
+                                aria-expanded="false"><i data-feather="calendar" class="feather-icon"></i><span
                                     class="hide-menu">Logout</span></a></li>
                     </ul>
                 </nav>
